syntax = "proto3";

package hyperterse;

option go_package = "github.com/hyperterse/hyperterse/core/proto/connectors";

// Connector types supported by adapters
enum Connector {
  CONNECTOR_UNSPECIFIED = 0; // Default value, should not be used
  CONNECTOR_POSTGRES = 1;
  CONNECTOR_REDIS = 2;
  CONNECTOR_MYSQL = 3;
  CONNECTOR_MONGODB = 4;
}
message ConnectorDef {
  string connection_string = 1;
  map<string, string> options = 2;
  ConnectorConfig config = 3;
}

message ConnectorConfig {
  bool json_statements = 1;
}

